--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#ED5565</color>
     <color name="colorPrimaryDark">#DA4453</color>
     <color name="colorAccent">#ED5565</color>
+
+    <color name="gray">#CDCDC1</color>
+    <color name="textColor">#000000</color>
+    <color name="bg">#F9CDAD</color>
 </resources>
